fix: add overflow hidden to Image container

--- a/components/Image/Image.css
+++ b/components/Image/Image.css
@@ -14,6 +14,7 @@
 
 .ztopia-image {
   position: relative;
+  overflow: hidden;
 
   &--normal {
     margin: 0;
